--- a/blockhubedu-landing/src/styles/globals.css
+++ b/blockhubedu-landing/src/styles/globals.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities; 
 
+@font-face {
+    font-family: "Cabin-Sketch";
+    src: url("/blockhubedu-landing/src/font/CabinSketch-Regular.ttf");
+  }
