--- a/blockhubedu-landing/src/styles/globals.css
+++ b/blockhubedu-landing/src/styles/globals.css
@@ -26,6 +26,10 @@ svg#sketch-filter {
     src: url("/font/ShadowsIntoLightTwo-Regular.ttf") format("truetype");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 
   /*body {
   /*  font-family: "CabinSketch", sans-serif;
