--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,11 @@ import Header from '../components/navbar/Header.astro';
 ---
 
 <Layout>
+
 	<Header />
-	<Welcome>
+	<Welcome />
+	<Welcome />
+	<Welcome />
+	<Welcome />
+
 </Layout>
