--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -25,15 +25,15 @@ import '../../styles/global.css';
            Blog
        </a>
        </div>
-      </nav>
+      </nav> 
       {/* Actions */}
       <div class="flex space-x-6">
-        <button class="bg-stone-400 p-2 sketchy sketchy-none rounded-full group hover:shadow-lg transition-transform duration-300 hover:scale-110">
+        <button class="bg-[url(/assets/HeaderButton.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
           <div class=" rotate-180 transition-transform duration-300 group-hover:rotate-0">
             🌓
             </div>
         </button>
-        <button class="bg-stone-400 p-2 group sketchy sketchy-none rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
+        <button class="bg-[url(/assets/HeaderButton.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
           <div class="apply-bounce">
             🚀
             </div>
