--- a/src/components/navbar/Logo.astro
+++ b/src/components/navbar/Logo.astro
@@ -2,7 +2,7 @@
 import '../../styles/global.css';
 ---
 
-<div class="bg-transparent w-36 h-14 hover:scale-110  hover:shadow-lg rounded-3xl transition-transform duration-300">
+<div class="bg-transparent w-36 h-14 rounded-3xl">
     <div class="w-full h-full bg-cover justify-center items-center" style={{ backgroundImage: "url('/assets/Logo.webp')"}}>  
     </div>
 </div>
