header decorations & animations

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,8 +8,7 @@ import background from '../assets/background.svg';
 	<main>
 		<section id="hero">
 			<a href="https://astro.build"
-				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
-			>
+				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a>
 			<h1>
 				hello <code><pre>world!</pre></code> This is the new blockhub app!.
 			</h1>
