--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -43,7 +43,7 @@ import Button from '../UI/Button.astro';
         </Button>
         </nav> 
       {/* Actions */}
-      <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex bg-[url(/assets/HeaderItem.webp)] bg-center bg-no-repeat bg-[length:100%_100%]"> 
+      <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex"> 
         <div class="flex space-x-6">
           <button class="bg-[url(/assets/HeaderButton.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
             <div class=" rotate-180 transition-transform duration-300 group-hover:rotate-0">
