welcome page & decorations

--- a/src/components/UI/Button.astro
+++ b/src/components/UI/Button.astro
@@ -1,8 +1,14 @@
 ---
 import '../../styles/global.css';
+
+interface Props {
+  href?: string;
+}
+
+const { href } = Astro.props;
 ---
 
-<div class="relative inline-block hover:scale-110 transition-transform duration-300">
+<a href={href} class="relative inline-block hover:scale-110 transition-transform duration-300">
     <img 
       src="/assets/Button.webp"
       alt="Button"
@@ -10,4 +16,4 @@ import '../../styles/global.css';
       <div class="absolute inset-0 flex items-center justify-center p-2">
     <slot />
 </div>
-</div>
+</a>
