--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,6 +2,15 @@
 import '../styles/global.css';
 ---
 
-<div class="bg-orange-100 h-full w-full">
+<section id='home'>
+	<div class="relative flex justify-center">
+		<div class="absolute flex flex-col"> 
+			<div class="flex flex-col items-center justify-center bg-orange-50 border-4 border-neutral-700 mt-30">
+			<p class="text-neutral-700 text-5xl font-[cabinSketch] font-bold p-3">Welcome to</p>
+			<p class="text-neutral-700 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
+			<p class="text-neutral-700 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
+			</div>
+		</div>
+	</div>
+</section>
 
-</div>
