--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -13,32 +13,24 @@ import Button from '../UI/Button.astro';
      </div>
      {/* Navigation Links */} 
         <nav id="siteNav" class="opacity-0 md:flex space-x-6 px-10 pb-1 z-[-10] scale-75 transition-all duration-300 origin-right">
-          <Button>
-          <div class="font-[shadowsLight2] font-bold text-neutral-700">
-            <a href="#home" class="text-4xl">
+          <Button href="#home">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
            Home
-            </a>
           </div>
           </Button>
-          <Button>
-            <div class="font-[shadowsLight2] font-bold text-neutral-700">
-            <a href="#projects" class="text-4xl">
-           Projects
-            </a>
+          <Button href="#projects">
+            <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+           Projects        
           </div>
         </Button>
-        <Button>
-          <div class="font-[shadowsLight2] font-bold text-neutral-700">            
-            <a href="#about" class="text-4xl">
+        <Button href="#about">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">            
            About
-            </a>
           </div>
         </Button>
-        <Button>
-          <div class="font-[shadowsLight2] font-bold text-neutral-700">
-            <a href="#blog" class="text-4xl">
+        <Button href="#blog">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
            Blog
-            </a>
           </div>
         </Button>
         </nav> 
@@ -55,7 +47,7 @@ import Button from '../UI/Button.astro';
             🚀
             </div>
           </button>
-            <button id="profileBtn" class="rotate-180 flex w-10 h-10 bg-[url(/assets/Profile.webp)] sketchy sketchy-none justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
+            <button id="profileBtn" class="rotate-180 flex w-10 h-10 bg-[url(/assets/Profile.webp)] justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
             </button>
         </div>
       </div>
