--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -14,22 +14,22 @@ import Button from '../UI/Button.astro';
      {/* Navigation Links */} 
         <nav id="siteNav" class="opacity-0 md:flex space-x-6 px-10 pb-1 z-[-10] scale-75 transition-all duration-300 origin-right">
           <Button href="#home">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
            Home
           </div>
           </Button>
           <Button href="#projects">
-            <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+            <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
            Projects        
           </div>
         </Button>
         <Button href="#about">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">            
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">            
            About
           </div>
         </Button>
         <Button href="#blog">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
            Blog
           </div>
         </Button>
@@ -47,7 +47,7 @@ import Button from '../UI/Button.astro';
             🚀
             </div>
           </button>
-            <button id="profileBtn" class="rotate-180 flex w-10 h-10 bg-[url(/assets/Profile.webp)] justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
+            <button id="profileBtn" class="rotate-0 flex w-10 h-10 bg-[url(/assets/Profile.webp)] justify-center items-center bg-cover rounded-full hover:shadow-lg transition-transform duration-300 hover:scale-110">
             </button>
         </div>
       </div>
@@ -60,13 +60,13 @@ import Button from '../UI/Button.astro';
             const nav = document.getElementById('siteNav');
             if (nav) {
                   if (nav.classList.contains('z-[-10]')) {
-                       profileBtn.classList.remove('rotate-180');
-                       profileBtn.classList.add('rotate-0');
+                       profileBtn.classList.remove('rotate-0');
+                       profileBtn.classList.add('rotate-180');
                        nav.classList.remove('z-[-10]', 'scale-75', 'opacity-0');
                        nav.classList.add('z-50', 'scale-100', 'opacity-100');
                     } else {
-                       profileBtn.classList.remove('rotate-0');
-                       profileBtn.classList.add('rotate-180');
+                       profileBtn.classList.remove('rotate-180');
+                       profileBtn.classList.add('rotate-0');
                        nav.classList.remove('z-50', 'scale-100', 'opacity-100');
                        nav.classList.add('z-[-10]', 'scale-75', 'opacity-0');
                      }
