--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,9 @@ import Header from '../components/navbar/Header.astro';
 	<Header />
 	<div class="container flex felx-col">
 	<div class="fixed bg-[url(/assets/Shadow.png)] bg-no-repeat bg-[length:100%_100%] bg-center w-full h-full">
+		<div class="fixed bg-[url(/assets/PencilDeco.png)] bg-no-repeat bg-[length:100%_100%] bg-center w-full h-full">
 			<Welcome />
+		</div>
 	</div>
 </div>
 	</main>
