--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -5,10 +5,10 @@ import '../styles/global.css';
 <section id='home'>
 	<div class="relative flex justify-center">
 		<div class="absolute flex flex-col"> 
-			<a href='#projects' class="flex flex-col items-center justify-center bg-[rgba(251,243,225,255)] border-4 rounded-4xl shadow-lg border-neutral-700 mt-30 hover:scale-110 transition-transform duration-300">
-			<p class="text-neutral-700 text-5xl font-[cabinSketch] font-bold p-3">Welcome to</p>
-			<p class="text-neutral-700 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
-			<p class="text-neutral-700 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
+			<a href='#projects' class="flex flex-col items-center justify-center mix-blend-plus-darker rounded-4xl mt-30 hover:scale-110 transition-transform duration-300">
+			<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold p-3">Welcome to</p>
+			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
+			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
 			</a>
 		</div>
 	</div>
