--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,10 @@ import Header from '../components/navbar/Header.astro';
 ---
 
 <Layout>
-	<main class="bg-orange-100 h-full w-full fixed">
+	<main class="bg-orange-100 bg-blend-multiply bg-[url(/assets/Background.webp)] bg-no-repeat bg-[length:100%_100%] bg-center h-full w-full fixed">
 	<Header />
-	<div class="container flex felx-col">
-	<div class="fixed bg-[url(/assets/Shadow.png)] bg-no-repeat bg-[length:100%_100%] bg-center w-full h-full">
-		<div class="fixed bg-[url(/assets/PencilDeco.png)] bg-no-repeat bg-[length:100%_100%] bg-center w-full h-full">
+	<div class="container flex felx-col justify-center">
 			<Welcome />
-		</div>
 	</div>
-</div>
 	</main>
 </Layout>
