Even more astetiks

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -5,7 +5,7 @@ import '../styles/global.css';
 <section id='home'>
 	<div class="relative flex justify-center">
 		<div class="absolute flex flex-col"> 
-			<a href='#projects' class="flex flex-col items-center justify-center mix-blend-plus-darker rounded-4xl mt-30 hover:scale-110 transition-transform duration-300">
+			<a href='#projects' class="flex flex-col bg-[url(/assets/EmptyContainer.webp)] bg-no-repeat bg-[length:100%_100%] bg-center items-center justify-center rounded-4xl mt-30 hover:scale-110 transition-transform duration-300">
 			<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold p-3">Welcome to</p>
 			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
 			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
