--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -7,7 +7,7 @@ import Button from '../UI/Button.astro';
   <div class="container justify-between items-center mx-auto flex z-50">
     {/* Logo */}
      <div class="hover:scale-110 transition-transform duration-300 px-10 pb-1 justify-between items-center flex"> 
-      <a href="/" class="flex items-center">
+      <a href="/" class="flex bg-[url(/assets/Button.webp)] bg-no-repeat bg-[length:100%_100%] bg-center items-center">
         <Logo />
       </a>
      </div>
@@ -37,12 +37,12 @@ import Button from '../UI/Button.astro';
       {/* Actions */}
       <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex"> 
         <div class="flex space-x-6">
-          <button class="bg-[url(/assets/HeaderButton.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
+          <button class="bg-[url(/assets/Button.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
             <div class=" rotate-180 transition-transform duration-300 group-hover:rotate-0">
             🌓
             </div>
           </button>
-          <button class="bg-[url(/assets/HeaderButton.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
+          <button class="bg-[url(/assets/Button.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
             <div class="apply-bounce">
             🚀
             </div>
