changed from webp to png for future uses

--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -7,29 +7,29 @@ import Button from '../UI/Button.astro';
   <div class="container justify-between items-center mx-auto flex z-50">
     {/* Logo */}
      <div class="hover:scale-110 transition-transform duration-300 px-10 pb-1 justify-between items-center flex"> 
-      <a href="/" class="flex bg-[url(/assets/Button.webp)] bg-no-repeat bg-[length:100%_100%] bg-center items-center">
+      <a href="/" class="flex drop-shadow-2xl bg-[url(/assets/Button.png)] bg-no-repeat bg-[length:100%_100%] bg-center items-center">
         <Logo />
       </a>
      </div>
      {/* Navigation Links */} 
         <nav id="siteNav" class="opacity-0 md:flex space-x-6 px-10 pb-1 z-[-10] scale-50 transition-all duration-300 origin-right">
           <Button href="#home">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
            Home
           </div>
           </Button>
           <Button href="#projects">
-            <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
+            <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
            Projects        
           </div>
         </Button>
         <Button href="#about">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">            
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">            
            About
           </div>
         </Button>
         <Button href="#blog">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 md:text-4xl text-sm">
+          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
            Blog
           </div>
         </Button>
@@ -37,12 +37,12 @@ import Button from '../UI/Button.astro';
       {/* Actions */}
       <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex"> 
         <div class="flex space-x-6">
-          <button class="bg-[url(/assets/Button.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
-            <div class=" rotate-180 transition-transform duration-300 group-hover:rotate-0">
+          <button class="drop-shadow-2xl bg-[url(/assets/Button.png)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
+            <div class="rotate-180 transition-transform duration-300 group-hover:rotate-0">
             🌓
             </div>
           </button>
-          <button class="bg-[url(/assets/Button.webp)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
+          <button class="drop-shadow-2xl bg-[url(/assets/Button.png)] bg-center bg-no-repeat bg-[length:100%_100%] p-2 group transition-transform duration-300 hover:scale-110">
             <div class="apply-bounce">
             🚀
             </div>
