--- a/src/components/UI/Button.astro
+++ b/src/components/UI/Button.astro
@@ -10,7 +10,7 @@ const { href } = Astro.props;
 
 <a href={href} class="relative inline-block hover:scale-110 transition-transform duration-300">
     <img 
-      src="/assets/Button.webp"
+      src="/assets/Button.png"
       alt="Button"
       class="hover:drop-shadow-lg transition-shadow duration-300 scale-80" />
       <div class="absolute inset-0 flex items-center justify-center p-2">
