--- a/src/components/navbar/Header.astro
+++ b/src/components/navbar/Header.astro
@@ -1,38 +1,38 @@
 ---
 import '../../styles/global.css';
 import Logo from './Logo.astro';
-import Button from '../UI/Button.astro';
+import HeaderButton from '../UI/HeaderButton.astro';
 ---
 <header class="z-[99999] top-0 fixed w-full bg-transparent">
   <div class="container justify-between items-center mx-auto flex z-50">
     {/* Logo */}
      <div class="hover:scale-110 transition-transform duration-300 px-10 pb-1 justify-between items-center flex"> 
-      <a href="/" class="flex drop-shadow-2xl bg-[url(/assets/Button.png)] bg-no-repeat bg-[length:100%_100%] bg-center items-center">
+      <a href="/" class="flex sketch-shadow bg-[rgba(251,243,225,255)] border-2 rounded-2xl border-neutral-700 items-center">
         <Logo />
       </a>
      </div>
      {/* Navigation Links */} 
-        <nav id="siteNav" class="opacity-0 md:flex space-x-6 px-10 pb-1 z-[-10] scale-50 transition-all duration-300 origin-right">
-          <Button href="#home">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+        <nav id="siteNav" class="relative opacity-0 justify-center space-x-6 z-[-10] scale-50 transition-all duration-300 origin-top">
+          <HeaderButton href="#home">
+          <div class="font-[shadowsLight2] font-bold text-neutral-800 text-4xl">
            Home
           </div>
-          </Button>
-          <Button href="#projects">
-            <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+          </HeaderButton>
+          <HeaderButton href="#projects">
+            <div class="font-[shadowsLight2] font-bold text-neutral-800 text-4xl">
            Projects        
           </div>
-        </Button>
-        <Button href="#about">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">            
+        </HeaderButton>
+        <HeaderButton href="#about">
+          <div class="font-[shadowsLight2] font-bold text-neutral-800 text-4xl">            
            About
           </div>
-        </Button>
-        <Button href="#blog">
-          <div class="font-[shadowsLight2] font-bold text-neutral-700 text-4xl">
+        </HeaderButton>
+        <HeaderButton href="#blog">
+          <div class="font-[shadowsLight2] font-bold text-neutral-800 text-4xl">
            Blog
           </div>
-        </Button>
+        </HeaderButton>
         </nav> 
       {/* Actions */}
       <div class="top-0 px-10 pt-2.5 pb-2.5 justify-between items-center flex"> 
