--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,34 @@ import Header from '../components/navbar/Header.astro';
 ---
 
 <Layout>
-	<main class="bg-orange-100  bg-blend-multiply bg-[url(/assets/Background.webp)] bg-no-repeat bg-[length:100%_100%] bg-center h-full w-full fixed">
+	<main class="bg-orange-100 h-full w-full fixed">
 	<Header />
 	<div class="container flex felx-col justify-center">
 			<Welcome />
 	</div>
 	</main>
 </Layout>
+<svg width="0" height="0">
+	<defs>
+	  <filter id="sketchy">
+		<feTurbulence type="fractalNoise" baseFrequency="0.05" numOctaves="8" result="noise" />
+		<feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />
+	  </filter>
+	</defs>
+</svg>
+<svg width="0" height="0">
+	<defs>
+		<filter id="rough-shadow">
+		  <feTurbulence type="fractalNoise" baseFrequency="0.08" numOctaves="5" result="noise"/>
+		  <feDisplacementMap in="SourceGraphic" in2="noise" scale="3"/>
+		</filter>
+	  </defs>
+	</svg>
+	<svg width="0" height="0">
+	  <defs>
+		<pattern id="hatch" patternUnits="userSpaceOnUse" width="10" height="10">
+		  <path d="M 0,0 l 10,10 M 10,0 l -10,10" stroke="black" stroke-width="1"/>
+		</pattern>
+	  </defs>
+  </svg>
+  
