--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,15 +3,6 @@
 .sketchy {
     filter: url(#sketchy);
 }
-svg#sketch-filter {
-    width: 0;
-    height: 0;
-    position: absolute;
-}
-
-.sketchy-none:hover {
-    filter: none;
-}
 
 @keyframes smoothBounce {
     0% { transform: translateY(0); }
@@ -42,3 +33,23 @@ svg#sketch-filter {
 html {
     scroll-behavior: smooth;
 }
+
+.sketch-shadow {
+    position: relative;
+    box-shadow: none; 
+}
+
+.sketch-shadow::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    box-shadow: -3px 3px 10px rgba(0, 0, 0, 0.8);
+    filter: url("#rough-shadow");
+    border-radius: inherit; 
+}
+
+
