--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -5,11 +5,16 @@ import '../styles/global.css';
 <section id='home'>
 	<div class="relative flex justify-center">
 		<div class="absolute flex flex-col"> 
-			<a href='#projects' class="flex drop-shadow-2xl flex-col bg-[url(/assets/EmptyContainer.png)] bg-no-repeat bg-[length:100%_100%] bg-center items-center justify-center rounded-4xl mt-30 hover:scale-110 transition-transform duration-300">
+			<div class="bg-[rgba(251,243,225,255)] sketchy sketch-shadow rounded-4xl mt-30 hover:scale-110 transition-transform duration-300">
+				<div class="sketch-inner-shadow sketch-inner-shadow--strong rounded-4xl">
+					<div class="flex flex-col items-center justify-center">
+				<div class="sketch-bg top-0 w-full h-15 rounded-t-4xl border-b-4 border-b-[rgb(44,44,44)]"></div>
 			<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold p-3">Welcome to</p>
 			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
 			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
-			</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
