--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,4 +35,11 @@ import Header from '../components/navbar/Header.astro';
 		</pattern>
 	  </defs>
   </svg>
-  
+  <svg width="0" height="0">
+	<defs>
+	  <filter id="sketchy-texture">
+		<feTurbulence type="fractalNoise" baseFrequency="0.08" numOctaves="5" result="noise"/>
+		<feDisplacementMap in="SourceGraphic" in2="noise" scale="4"/>
+	  </filter>
+	</defs>
+  </svg>  
