--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,20 @@
 @import "tailwindcss";
 
 .sketchy {
-    filter: url(#sketchy);
+    position: relative;
+}
+
+.sketchy::before {
+    content: "";
+    position: absolute;
+    top: 0px; 
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 4px solid rgb(44, 44, 44); 
+    filter: url("#sketchy"); 
+    border-radius: inherit; 
+    pointer-events: none; 
 }
 
 @keyframes smoothBounce {
@@ -36,7 +49,6 @@ html {
 
 .sketch-shadow {
     position: relative;
-    box-shadow: none; 
 }
 
 .sketch-shadow::after {
@@ -46,10 +58,67 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 0;
     box-shadow: -3px 3px 10px rgba(0, 0, 0, 0.8);
     filter: url("#rough-shadow");
     border-radius: inherit; 
 }
 
+.sketch-shadow::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    box-shadow: 3px -3px 10px rgba(0, 0, 0, 0.8);
+    filter: url("#rough-shadow");
+    border-radius: inherit; 
+}
 
+.sketch-inner-shadow {
+    position: relative;
+    z-index: 1;
+}
+
+.sketch-inner-shadow::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    box-shadow: inset 3px -3px 5px rgba(0, 0, 0, 0.8);
+    filter: url("#rough-shadow");
+    border-radius: inherit; 
+}
+
+.sketch-inner-shadow::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    box-shadow: inset -3px 3px 5px rgba(0, 0, 0, 0.3);
+    filter: url("#rough-shadow");
+    border-radius: inherit; 
+}
+
+.sketch-inner-shadow--strong::after {
+    box-shadow: inset 6px -6px 10px rgba(0, 0, 0, 0.9);
+}
+
+.sketch-inner-shadow--strong::before {
+    box-shadow: inset -6px 6px 10px rgba(0, 0, 0, 0.5);
+}
+
+.sketch-bg {
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M 0,0 L 10,10 M 10,0 L 0,10' stroke='%23221412' stroke-width='4'/%3E%3C/svg%3E");
+    background-size: 4px 4px; 
+    filter: url("#sketchy-texture");
+    opacity: 1; 
+}
