--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -3,17 +3,19 @@ import '../styles/global.css';
 ---
 
 <section id='home'>
-	<div class="relative flex justify-center">
-		<div class="absolute flex flex-col"> 
+	<div class="relative justify-center items-center container h-screen w-screen">
+		<div class="absolute flex flex-col items-center mx-115 my-2"> 
+			<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold">Welcome to</p>
+			<p class=" text-neutral-800 text-6xl font-[cabinSketch] font-bold whitespace-nowrap">BlockHub Studio</p>
+		</div>
+		<div class="absolute border-2"> 
 			<div class="bg-[rgba(251,243,225,255)] sketchy sketch-shadow rounded-2xl mt-30 hover:scale-110 transition-transform duration-300">
 				<div class="sketch-inner-shadow sketch-inner-shadow--strong rounded-2xl">
 					<div class="flex flex-col items-center justify-center">
 				<div class="sketch-bg top-0 w-full h-15 rounded-t-2xl border-b-4 border-b-[rgb(44,44,44)]"></div>
-			<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold p-3">Welcome to</p>
-			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">BlockHub</p>
-			<p class="text-neutral-800 text-9xl font-[cabinSketch] font-bold p-3">Studio</p>
-					</div>
+				<p class="text-neutral-800 text-4xl font-[cabinSketch] font-bold">Join Us</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</div>
